refactor publisher instantiation code after deprecation