@@ -1,5 +1,6 @@
 package deors.devices.ambientstation.raspberry.publishers;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -23,8 +24,9 @@ public class PublisherFactory {
         Publisher result = null;
         try {
             Class<?> provider = Class.forName(providerClass);
-            result = (Publisher) provider.newInstance();
-        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException ex) {
+            result = (Publisher) provider.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException | IllegalAccessException | InstantiationException
+                 | NoSuchMethodException | ClassNotFoundException ex) {
             logger.log(Level.SEVERE, "unable to instantiate or initialize the publisher object", ex);
         }
         return result;
